# poetry_test

./: .gitignore  README.md  README.rst  pyproject.toml
poetry_test/: memo.ipynb  module_usage.ipynb  my_module.py  python_environment_instruction.ipynb
