[tool.poetry]
name = "poetry_test"
version = "0.1.0"
description = ""
authors = ["Ryo Hanafusa <r_hanafusa@keywalker.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^2.1.2"
numpy = "^1.18.4"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
pandas-profiling = "^2.6.0"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
